<resources>
    <string name="app_name">MaximTask3/1</string>
    <string name="austria_country">Austria</string>
    <string name="poland_country">Poland</string>
    <string name="italy_country">Italy</string>
    <string name="colombia_country">Colombia</string>
    <string name="madagascar_country">Madagascar</string>
    <string name="thailand_country">Thailand</string>
    <string name="denmark_country">Denmark</string>
    <string name="switzerland_country">Switzerland</string>
</resources>