<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_white">

        <FrameLayout
            android:id="@+id/austria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/standard_flag_height"
                android:background="@color/red" />

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/white_color_height_au"
                android:layout_marginTop="@dimen/white_color_margin_top_au"
                android:background="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/austria_country"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_country_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/austria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/austria"
            app:layout_constraintTop_toTopOf="@+id/austria" />

        <FrameLayout
            android:id="@+id/poland"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_large_margin"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/austria">

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/standard_flag_height"
                android:background="@color/white" />

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/red_color_height_pol"
                android:layout_marginTop="@dimen/red_color_margin_top_pol"
                android:background="@color/red" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poland_country"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_country_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/poland"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/poland"
            app:layout_constraintTop_toTopOf="@+id/poland" />

        <FrameLayout
            android:id="@+id/italy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poland">

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/standard_flag_height"
                android:background="@color/green" />

            <FrameLayout
                android:layout_width="@dimen/white_color_width_ita"
                android:layout_height="@dimen/white_color_height_ita"
                android:layout_marginStart="@dimen/white_color_margin_start_ita"
                android:background="@color/white" />

            <FrameLayout
                android:layout_width="@dimen/red_color_width_ita"
                android:layout_height="@dimen/red_color_height_ita"
                android:layout_marginStart="@dimen/red_color_margin_start_ita"
                android:background="@color/red" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italy_country"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_country_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/italy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/italy"
            app:layout_constraintTop_toTopOf="@+id/italy" />

        <FrameLayout
            android:id="@+id/colombia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_large_margin"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/italy">

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/yellow_color_height_col"
                android:background="@color/yellow" />

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/blue_color_height_col"
                android:layout_marginTop="@dimen/blue_color_margin_top_col"
                android:background="@color/blue" />

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/red_color_height_col"
                android:layout_marginTop="@dimen/red_color_margin_top_col"
                android:background="@color/red" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colombia_country"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_country_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/colombia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/colombia"
            app:layout_constraintTop_toTopOf="@+id/colombia" />

        <FrameLayout
            android:id="@+id/madagascar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/colombia">

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/standard_flag_height"
                android:background="@color/white" />

            <FrameLayout
                android:layout_width="@dimen/red_color_width_mad"
                android:layout_height="@dimen/red_color_height_mad"
                android:layout_marginStart="@dimen/red_color_margin_start_mad"
                android:background="@color/red_light" />

            <FrameLayout
                android:layout_width="@dimen/green_color_width_mad"
                android:layout_height="@dimen/green_color_height_mad"
                android:layout_marginStart="@dimen/green_color_margin_start_mad"
                android:layout_marginTop="@dimen/green_color_margin_top_mad"
                android:background="@color/green" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/madagascar_country"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_country_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/madagascar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/madagascar"
            app:layout_constraintTop_toTopOf="@+id/madagascar" />

        <FrameLayout
            android:id="@+id/thailand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_large_margin"
            android:background="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/madagascar">

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/standard_flag_height"
                android:background="@color/red" />

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/white_color_height_thai"
                android:layout_marginTop="@dimen/white_color_margin_top_thai"
                android:background="@color/white" />

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/blue_color_height_thai"
                android:layout_marginTop="@dimen/blue_color_margin_top_thai"
                android:background="@color/dark_blue" />

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/white_second_color_height_thai"
                android:layout_marginTop="@dimen/white_second_color_margin_top_thai"
                android:background="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thailand_country"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_country_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/thailand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/thailand"
            app:layout_constraintTop_toTopOf="@+id/thailand" />

        <FrameLayout
            android:id="@+id/denmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_large_margin"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thailand">

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/standard_flag_height"
                android:background="@color/red" />

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/horizontal_line_height_den"
                android:layout_marginTop="@dimen/horizontal_line_margin_top_den"
                android:background="@color/white" />

            <FrameLayout
                android:layout_width="@dimen/vertical_line_width_den"
                android:layout_height="@dimen/vertical_line_height_den"
                android:layout_marginStart="@dimen/vertical_line_margin_start_den"
                android:background="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/denmark_country"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_country_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/denmark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/denmark"
            app:layout_constraintTop_toTopOf="@+id/denmark" />


        <FrameLayout
            android:id="@+id/switzerland"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_large_margin"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/denmark">

            <FrameLayout
                android:layout_width="@dimen/standard_flag_width"
                android:layout_height="@dimen/standard_flag_height"
                android:layout_marginBottom="@dimen/margin_bottom_swtz"
                android:background="@color/red" />

            <FrameLayout
                android:layout_width="@dimen/vertical_line_width_swtz"
                android:layout_height="@dimen/vertical_line_height_swtz"
                android:layout_marginStart="@dimen/vertical_line_margin_start_swtz"
                android:layout_marginTop="@dimen/vertical_line_margin_top_swtz"
                android:background="@color/white" />

            <FrameLayout
                android:layout_width="@dimen/horizontal_line_width_swtz"
                android:layout_height="@dimen/horizontal_line_height_swtz"
                android:layout_marginStart="@dimen/horizontal_line_margin_start_swtz"
                android:layout_marginTop="@dimen/horizontal_line_margin_top_swtz"
                android:background="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/swtz_country_text_margin_top"
            android:text="@string/switzerland_country"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_country_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toEndOf="@id/switzerland"
            app:layout_constraintTop_toTopOf="@+id/switzerland" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
